--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bryntum/gantt": "npm:@bryntum/gantt-trial@^5.6.10",
-    "@bryntum/gantt-react": "^5.6.10",
-    "next": "^14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.77.2"
+    "@bryntum/gantt": "npm:@bryntum/gantt-trial@5.6.13",
+    "@bryntum/gantt-react": "5.6.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "@types/react": "~18.2.14",
+    "@types/react-dom": "~18.2.6",
+    "@vitejs/plugin-react": "~4.0.1",
+    "postinstall": "~0.7.4",
+    "sass": "~1.69.6",
+    "typescript": "~5.1.6",
+    "vite": "~4.4.5"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0"
   }
 }
