--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bryntum/gantt": "npm:@bryntum/gantt-trial@5.6.13",
-    "@bryntum/gantt-react": "5.6.13",
+    "@bryntum/gantt": "npm:@bryntum/gantt-trial@^5.6.13",
+    "@bryntum/gantt-react": "^5.6.13",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
