--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "next build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bryntum/gantt": "npm:@bryntum/gantt-trial@^5.6.13",
-    "@bryntum/gantt-react": "^5.6.13",
+    "@bryntum/gantt": "^5.6.10",
+    "@bryntum/gantt-react": "^5.6.10",
+    "@bryntum/gantt-trial-lib": "^1.0.0",
     "@mui/x-license-pro": "^6.10.2",
+    "next": "^14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
