--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "package.json", "use": "@vercel/next" }
+    { "src": "package.json", "use": "@vercel/next" },
+    { "src": "public/*", "use": "@vercel/static" }
   ],
   "routes": [
+    { "src": "/_next/static/(.*)", "headers": { "cache-control": "public, max-age=31536000, immutable" }, "dest": "/_next/static/$1" },
     { "src": "/(.*)", "dest": "/" }
   ]
 }
